fixing z-index for modals and header bar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1314,7 +1314,7 @@ section:last-of-type {
   justify-content: center;
   overflow: hidden;
   position: fixed;
-  z-index: 40;
+  z-index: 999;
 }
 
 .modal::before,
